--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "MIMode": "gdb",
             "environment": [],
             "stopAtEntry": false,
-            "miDebuggerPath": "/usr/bin/gdb",
+            "miDebuggerPath": "C:/msys64/mingw64/bin/g++.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing",
