--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,11 @@
         "system_error": "cpp",
         "*.inc": "cpp",
         "string": "cpp",
-        "istream": "cpp"
+        "istream": "cpp",
+        "unordered_map": "cpp",
+        "ostream": "cpp",
+        "streambuf": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp"
     }
 }
