--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,11 +8,12 @@
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
-				"-Wall",
-				"src/*.cpp",
-				"-lncurses",
 				"-o",
-				"bin/debug/debug"
+				"test.exe",
+				"src/*.cpp",
+				"-Iinclude",
+				"-Llib",
+				"-lpdcurses",
 			],
 			"options": {
 				"cwd": "${workspaceFolder}"
