finished linked list version of board

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
 				"-g",
 				"-o",
 				"test.exe",
-				"src/pointer/*.cpp",
+				"src/linked-list/*.cpp",
 				"-Iinclude",
 				"-Llib",
 				"-lpdcurses",
